all building in tmp folder

--- a/bin/build
+++ b/bin/build
@@ -10,20 +10,17 @@ source $DIR/script-common
 
 check_for_s3
 
-REAL_APP_DIR=${REAL_APP_DIR:-$HOME}
+export REAL_APP_DIR=${REAL_APP_DIR:-/app}
 export BUILD_DIR=${BUILD_DIR:-$REAL_APP_DIR}
+
+# from script-common
+export NIX_MNT NIX_VERSION_FULL NIX_ROOT_PATH
 
 echo "Build dir: $BUILD_DIR" | indent
 
-declare -x NIX_ROOT_PATH
-
-if [ "$BUILD_DIR" = "$REAL_APP_DIR" ] || [ ! -w $REAL_APP_DIR ]; then     # we are in a one-off dyno; home is not writable
+if [ "$BUILD_DIR" = "$REAL_APP_DIR" ] || [ ! -w $REAL_APP_DIR ]; then # we are in a one-off dyno; /app is not writable
+  mkdir -p $NIX_ROOT_PATH
   rsync -a $BUILD_DIR/nix-mnt /tmp
-  export NIX_ROOT_PATH=/tmp/nix-mnt/$NIX_VERSION_FULL
-  export HOME=/tmp/nix-mnt
-else
-  NIX_ROOT_PATH=$BUILD_DIR/nix-mnt/$NIX_VERSION_FULL
-  export HOME=$BUILD_DIR
 fi
 
 export NIX_S3_KEY NIX_S3_SECRET NIX_S3_BUCKET
